update build tools

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -2,4 +2,7 @@
 @import 'common/common.styl';
 @import 'common/setting.styl';
 
+@import 'component/header.styl';
 @import 'component/footer.styl';
+@import 'component/subcomp.styl';
+ 
