--- a/src/jade/common/header.jade
+++ b/src/jade/common/header.jade
@@ -1,22 +1,22 @@
 header
   .header-main
     .header-logo
-      img(src="", alt="")
+      img(src="./static/images/logo.png", alt="")
     .header-nav
       ul
         li.active
-          a(href="#") 关于真言
+          a(href="index.html") 关于真言
         li
-          a(href="#") 新闻中心
+          a(href="news.html") 新闻中心
         li
-          a(href="#") 产品中心
+          a(href="products.html") 产品中心
         li
-          a(href="#") 解决方案
+          a(href="solutions.html") 解决方案
         li
-          a(href="#") 典型案例
+          a(href="example.html") 典型案例
         li
-          a(href="#") 技术服务
+          a(href="server.html") 技术服务
         li
-          a(href="#") 招贤纳士
+          a(href="recruitment.html") 招贤纳士
         li
-          a(href="#") 联系我们
+          a(href="contact.html") 联系我们
