--- a/src/styl/common/common.styl
+++ b/src/styl/common/common.styl
@@ -1,5 +1,5 @@
-$main-color = #0c6bfa
-$background-color = #68cdfd
+$main-color = #3b81bd
+$background-color = #ebf2f8
 
 $black-color = #000000
 $white-color = #ffffff
@@ -7,8 +7,11 @@ $white-color = #ffffff
 $default-color = $black-color
 $default-back = #cecece
 
+$border-color = #666
+
 $default-fontsize = 14px
 $mini-fontsize = 12px
 $larger-fontsize = 16px
 $big-fontsize = 20px
 
+$font-color = #666
