--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,11 +1,79 @@
-/* coffee : 1.0.0 : Wed Aug 26 2020 17:09:50 GMT+0800 (China Standard Time) */body {
+/* coffee : 1.0.0 : Sat Aug 29 2020 02:08:17 GMT+0800 (GMT+08:00) */body {
   margin: 0;
+  color: #666;
+  font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 ul {
   padding: 0;
+  margin: 0;
+}
+ul li {
+  list-style: none;
+}
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 0;
+}
+.zp-main {
+  max-width: 960px;
+  width: 100%;
+  margin: auto;
+  padding: 30px 0;
+}
+.zp-contact {
+  max-width: 600px;
+  margin: auto;
+}
+.swiper-container .swiper-slide img {
+  width: 100%;
+  max-height: 600px;
+}
+.swiper-container .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: #fff;
+  opacity: 1;
+}
+.swiper-container .swiper-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: #e77813;
+}
+.swiper-container.hero-banner .swiper-slide img {
+  min-height: 800px;
+  max-height: 100vh;
+  display: block;
+}
+.map {
+  margin-bottom: 20px;
+}
+.map img {
+  max-width: 100%;
+}
+.mark-items {
+  margin-bottom: 40px;
+}
+.mark-items .item {
+  margin-bottom: 10px;
+  font-size: 12px;
+  font-weight: 500;
+  color: #a3a3a3;
+}
+.mark-items .item:first-child {
+  font-size: 14px;
+}
+footer {
+  background: #3b81bd;
+  color: #fff;
+  font-size: 12px;
+  padding: 15px 0;
+  text-align: center;
 }
 header .header-main {
   max-width: 960px;
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -14,59 +82,276 @@ header .header-main .header-nav ul {
   display: flex;
   align-items: center;
 }
-header .header-main .header-nav ul li {
+header .header-main .header-nav ul li a.active,
+header .header-main .header-nav ul li a:hover {
+  background: #3b81bd;
+  color: #fff;
+}
+header .header-main .header-nav ul li a {
+  color: #202020;
+  text-decoration: none;
+  display: block;
   padding: 20px;
 }
-header .header-main .header-nav ul li.active,
-header .header-main .header-nav ul li:hover {
-  background: #0c6bfa;
+header .header-main .header-nav ul li a:visited {
+  color: #202020;
+}
+header .header-main .header-nav ul li a:hover {
+  background: #3b81bd;
   color: #fff;
 }
-footer {
-  background: #0c6bfa;
-  color: #fff;
-  font-size: 12px;
-  padding: 15px 0;
-  text-align: center;
+.homepage {
+  position: relative;
+}
+.homepage .home-items {
+  position: absolute;
+  bottom: 150px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  z-index: 11;
+  display: flex;
+  max-width: 45%;
+  justify-content: space-between;
+}
+.homepage .home-items .home-item {
+  border-radius: 10px;
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+}
+.homepage .home-items .home-item .item-img {
+  height: 100%;
+  width: 100px;
+  flex: 0 0 100px;
+}
+.homepage .home-items .home-item .item-img img {
+  width: 100%;
+  height: 100%;
+}
+.homepage .home-items .home-item .item-content {
+  margin-left: 10px;
+  flex: 0 0 120px;
+  width: 120px;
+}
+.homepage .home-items .home-item .item-content h5 {
+  color: #3b81bd;
+  margin: 0 0 10px;
+  font-size: 16px;
+}
+.homepage .home-items .home-item .item-content ul li {
+  margin-bottom: 5px;
+}
+.homepage .home-items .home-item .item-content ul li:before {
+  content: '';
+  width: 0;
+  height: 0;
+  display: inline-block;
+  border-width: 5px;
+  border-color: #e77813;
+  border-style: solid;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  transform: rotate(-45deg);
+  margin-right: 5px;
+}
+.homepage .home-items .home-item .item-content ul li a {
+  color: #202020;
+  text-decoration: none;
+  font-size: 14px;
+}
+.homepage .home-items .home-item:after {
+  content: '';
+  position: absolute;
+  background: #fff;
+  opacity: 0.7;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.icon:after {
+  content: '';
+  display: inline-block;
+  width: auto;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  min-width: 20px;
+  min-height: 20px;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+.icon-address:after {
+  background-image: url("../images/icons/icon-address.png");
+}
+.icon-email:after {
+  background-image: url("../images/icons/icon-email.png");
+}
+.icon-fax:after {
+  background-image: url("../images/icons/icon-fax.png");
+}
+.icon-phone:after {
+  background-image: url("../images/icons/icon-phone.png");
+}
+.icon-postcode:after {
+  background-image: url("../images/icons/icon-postcode.png");
+}
+.icon-address:after {
+  background-image: url("../images/icons/icon-address.png");
 }
 .content-title {
   text-align: center;
+  margin-bottom: 30px;
 }
 .content-title h3 {
   font-size: 20px;
+  margin-bottom: 10px;
 }
 .content-title span {
-  display: block;
+  display: inline-block;
   padding: 5px 10px;
-  background: #0c6bfa;
+  background: #3b81bd;
   color: #fff;
   text-transform: uppercase;
 }
 .content-breadcrumbs {
   font-size: 16px;
-  color: #0c6bfa;
-  background: #68cdfd;
-  padding: 0 5px;
+  color: #3b81bd;
+  background: #ebf2f8;
+  padding: 8px 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.content-breadcrumbs .breadcrumbs {
+  display: flex;
+  align-items: center;
 }
 .content-breadcrumbs .breadcrumbs span {
   font-size: 12px;
+  margin-left: 10px;
+}
+.content-nav {
+  width: 190px;
 }
 .content-nav li {
-  text-align: center;
-  text-align: center;
+  margin-bottom: 2px;
 }
-.content-nav li span {
-  display: none;
-  width: 8px;
-  height: 8px;
+.content-nav li a {
+  display: block;
+  padding: 8px 10px;
+  text-decoration: none;
+  text-align: center;
+  background: #f6f6f6;
+  color: #666;
+}
+.content-nav li a:visited {
+  color: #666;
+}
+.content-nav li a.active,
+.content-nav li a:hover {
+  background: #3b81bd;
+  color: #fff;
+}
+.content-nav li a.active span,
+.content-nav li a:hover span {
+  border-right-color: #fff;
+  border-bottom-color: #fff;
+}
+.content-nav li a span {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
   border-width: 1px;
   border-style: solid;
   border-color: transparent;
-  border-right-color: #fff;
-  border-bottom-color: #fff;
-  transform: rotate(-35deg) skew(10deg, 10deg);
+  transform: rotate(-43deg) skew(18deg, 16deg);
+  top: -2px;
+  position: relative;
 }
-.content-nav li.active span,
-.content-nav li:hover span {
+.content-newslist .news-item {
+  margin-bottom: 30px;
+  display: flex;
+}
+.content-newslist .news-item .item-img {
+  flex: 0 0 300px;
+  margin-right: 10px;
+}
+.content-newslist .news-item .item-img img {
+  width: 100%;
+}
+.content-newslist .news-item .item-content {
+  flex: 1;
+  color: #666;
+  position: relative;
+}
+.content-newslist .news-item .item-content h4 {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+}
+.content-newslist .news-item .item-content .learn-more {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.content-newslist .news-item .item-content .learn-more a {
+  text-decoration: none;
+  font-size: 12px;
+  color: #666;
+}
+.content-itemlist {
+  margin-top: 20px;
+}
+.content-itemlist .news-item {
+  display: flex;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #666;
+}
+.content-itemlist .news-item .item-img {
+  margin-right: 10px;
+  flex: 0 0 120px;
+}
+.content-itemlist .news-item .item-content {
+  flex: 1;
+  position: relative;
+}
+.content-itemlist .news-item .item-content h4 {
+  font-size: 16px;
+  color: #3b81bd;
+  margin-bottom: 20px;
+}
+.content-itemlist .news-item .item-content .learn-more {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+.content-itemlist .news-item .item-content .learn-more a {
   display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  padding: 8px 15px;
+  border-radius: 8px;
+  background-color: #3b81bd;
+  font-size: 17px;
+}
+.content-component {
+  text-align: center;
+  padding-bottom: 30px;
+  font-size: 12px;
+}
+.page-block {
+  display: flex;
+  margin-top: 5px;
+}
+.page-block .page-min-banner {
+  flex: 1;
+  margin-left: 10px;
+}
+.page-block .page-min-banner img {
+  width: 100%;
 }
