--- a/src/jade/products.jade
+++ b/src/jade/products.jade
@@ -3,45 +3,62 @@ extends templates/master
 include ./mixin/page-component
 
 block main-content
-  .content content
-  +pagetitle({
-    title: '产品中心',
-    description: 'product cemter '
-  })
+  include ./common/banner.jade
+  .zp-main
+    +pagetitle({
+      title: '产品中心',
+      description: 'product cemter '
+    })
 
-  +page-breadcrumbs({
-    title: '产品中心',
-    list: [
-      '网站首页',
-      '产品中心'
-    ]
-  })
+    +page-breadcrumbs({
+      title: '产品中心',
+      list: [
+        '网站首页',
+        '产品中心'
+      ]
+    })
 
-  +pagenav({
-    nav: [
-      '子产品1',
-      '子产品2',
-      '子产品3',
-      '子产品4'
-    ]
-  })
+    .page-block
+      +pagenav({
+        nav: [
+          '环境治理',
+          '环境监测',
+        ]
+      })
 
-  +itemlist({
-    items: [
-      {
-        title: '产品名称',
-        description: '描述描述',
-        url: '#'
-      },
-      {
-        title: '产品名称',
-        description: '描述描述',
-        url: '#'
-      },
-      {
-        title: '产品名称',
-        description: '描述描述',
-        url: '#'
-      }
-    ]
-  })
+      include ./common/pagebanner
+
+    +itemlist({
+      items: [
+        {
+          title: '蓄热式催化净化装置（RCO）',
+          description: '蓄热式催化焚烧炉，是将低温催化氧化与蓄热技术相结合的一种有机废气处理设备。该设备是在RTO技术基础上发展起来的一种新型挥发性有机物处理设备，它吸取了RTO能够充分蓄热回收热能的优点，在催化氧化过程中，催化剂表面的作用使反应物分子富集于催化剂表面，催化剂降低反应所需活化能，加快了氧化反应的进行，提高了氧化反应的速率。在特定催化剂的作用下，有机物在较低的温度下(250℃～300℃)发生氧化分解，生成CO2和H2O，并放出大量热能',
+          url: '#'
+        },
+        {
+          title: '蓄热式热力焚化炉（RTO）',
+          description: '蓄热式废气焚烧炉(RTO)是本公司在消化、吸收国内外先进技术的基础上开发的一种有机废气治理设备。该装置主要利用高效蓄热材料，通过废气气流的程序切换，将燃烧废气的废热贮存在蓄热材料中，用于下一阶段进入的废气预热，提高废气进气温度，回收废热，与传统的高温焚化以及催化燃烧等工艺相比，具有热效率高(≥95%)、运行可靠、能处理大风量、中高浓度废气等特点。',
+          url: '#'
+        },
+        {
+          title: '活性炭吸附回收装置',
+          description: '活性炭吸附回收装置是利用活性炭对有机溶剂的强吸附性而开发的。它是采用吸附浓缩—脱附再生—溶剂分离回收的工艺流程而设计的，由并联的两个或三个活性炭吸附器和一套脱附回收装置组成。它具有技术成熟，性能稳定，净化效率高，可回收有机物，尾气排放浓度低、安全可靠等优点。',
+          url: '#'
+        },
+        {
+          title: '活性炭纤维吸附回收装置',
+          description: '活性炭纤维吸附回收装置是一种固定循环式吸附床机构，它利用于吸附、蒸汽解析性能优异的活性炭纤维作为吸附剂，可将有机废气中的有机物质吸附，并将有机物回收利用，从而达到节能降耗的目的，净化率可达95%以上，为客户大大减轻了环保压力。吸附床一般不采用不锈钢材质，两箱或多箱吸附、连续操作运行，大大提高产品的回收效率。',
+          url: '#'
+        },
+        {
+          title: '沸石转轮吸附浓缩装置',
+          description: '沸石转轮吸附浓缩装置采用吸附-脱附-浓缩焚化三项连续程序，主要用于有机废气的治理;特别适合于大风量，低浓度场合。该吸附装置以陶瓷纤维为基材，做成蜂窝状的大圆盘轮状系统，轮子表面涂覆疏水性沸石做吸附剂。沸石转轮吸附浓缩装置主要由废气预处理系统、分子筛转轮浓缩吸附系统、脱附系统、冷却干燥系统和自动控制系统等组成。转轮后一般有后处理系统',
+          url: '#'
+        },
+        {
+          title: '生物除臭装置',
+          description: '本公司采用目前世界先进的生物法来治理恶臭污染，其主要原理是将微生物接种于包裹有营养膜的无机滤料表面，微生物以营养膜和恶臭物质为饵料而繁殖，当恶臭分子被吸附在膜和无机滤料上时，微生物就会将这些恶臭物质分解消化，最终生成无污染的无机物质。',
+          url: '#'
+        }
+      ]
+    })
