--- a/src/jade/templates/base.jade
+++ b/src/jade/templates/base.jade
@@ -5,9 +5,12 @@ html
     meta(http-equiv="X-UA-Compatible",content="IE=edge")
     meta(name="viewport", content="width=device-width,initial-scale=1")
     block styles
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">   
 body
   block header
   block main-content
   
   block footer
-  
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"> </script>
+  script(src="./static/js/main.js")
