--- a/src/styl/common/setting.styl
+++ b/src/styl/common/setting.styl
@@ -1,5 +1,26 @@
 body
   margin: 0
-  
+  color $font-color
+  font-family: 'Microsoft YaHei', Arial, Helvetica, sans-serif
+  font-size: $default-fontsize
 ul
   padding: 0
+  margin: 0
+  li
+    list-style none
+
+h1,
+h2,
+h3,
+h4
+  margin: 0
+  padding: 0
+.zp-main
+  max-width: 960px
+  width: 100%
+  margin: auto
+  padding: 30px 0
+.zp-contact
+  max-width: 600px
+  margin: auto
+
