--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -2,7 +2,6 @@
 @import 'common/common.styl';
 @import 'common/setting.styl';
 
-@import 'component/header.styl';
-@import 'component/footer.styl';
-@import 'component/subcomp.styl';
+@import 'component/*.styl';
+
  
