--- a/src/jade/contact.jade
+++ b/src/jade/contact.jade
@@ -11,8 +11,10 @@ block main-content
     })
     .zp-contact
       .content-component 为了进一步
+      #map
       .map
         img(src="./static/images/map.png", alt="")
+        
       .mark-items
         .item
           span.icon.icon-address
