--- a/src/jade/templates/base.jade
+++ b/src/jade/templates/base.jade
@@ -6,7 +6,7 @@ html
     meta(name="viewport", content="width=device-width,initial-scale=1")
     block styles
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">   
-    <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=GXdu5k7ByAnymGNbZaEG65WL2DktAWWF"></script>
+    <script type="text/javascript" src="//api.map.baidu.com/getscript?type=webgl&v=1.0&ak=GXdu5k7ByAnymGNbZaEG65WL2DktAWWF"></script>
 body
   block header
   block main-content
