--- a/src/jade/contact.jade
+++ b/src/jade/contact.jade
@@ -11,9 +11,7 @@ block main-content
     })
     .zp-contact
       .content-component 为了进一步
-      #map
-      .map
-        img(src="./static/images/map.png", alt="")
+      #map.map
         
       .mark-items
         .item
